Fixed height issue on mobile

--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ canvas {
 #particles-js {
     position: absolute;
     width: 100%;
-    height: calc(100% - 54px);
+    height: calc(100vh - 54px);
     background-color: #0D0D0D;
 }
 
